--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,63 +1,66 @@
 <div class="container">
-    <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6"><!-- Material form login -->
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="crd">
+        <!-- Material form login -->
         <mdb-card>
-        
-            <mdb-card-header class="info-color white-text text-center py-4">
-              <h5>
-                <strong>Sign in</strong>
-              </h5>
-            </mdb-card-header>
-          
-          
-            <!--Card content-->
-            <mdb-card-body class="px-lg-5 pt-0">
-          
-              <!-- Form -->
-              <form class="text-center" style="color: #757575;">
-          
-                <!-- NIC -->
-                <div class="md-form">
-                  <input type="email" id="materialLoginFormEmail" class="form-control" mdbInput>
-                  <label for="materialLoginFormEmail">NIC</label>
+
+          <mdb-card-header class="info-color white-text text-center py-4">
+            <h5>
+              <strong>Sign in</strong>
+            </h5>
+          </mdb-card-header>
+
+
+          <!--Card content-->
+          <mdb-card-body class="px-lg-5 pt-0">
+
+            <!-- Form -->
+            <form class="text-center" style="color: #757575;" (ngSubmit)="onSubmit()">
+
+              <!-- NIC -->
+              <div class="md-form">
+                <input type="text" name="nic" id="materialLoginFormEmail" class="form-control" mdbInput
+                [(ngModel)]="nic">
+                <label for="materialLoginFormEmail">NIC</label>
+              </div>
+
+              <!-- Password -->
+              <div class="md-form">
+                <input type="password" name="password" id="materialLoginFormPassword" class="form-control" mdbInput [(ngModel)]="password">
+                <label for="materialLoginFormPassword">Password</label>
+              </div>
+
+              <div class="d-flex justify-content-around">
+                <div>
+                  <!-- Remember me -->
+                  <mdb-checkbox>Remember me</mdb-checkbox>
                 </div>
-          
-                <!-- Password -->
-                <div class="md-form">
-                  <input type="password" id="materialLoginFormPassword" class="form-control" mdbInput>
-                  <label for="materialLoginFormPassword">Password</label>
+                <div>
+                  <!-- Forgot password -->
+                  <a href="">Forgot password?</a>
                 </div>
-          
-                <div class="d-flex justify-content-around">
-                  <div>
-                    <!-- Remember me -->
-                    <mdb-checkbox>Remember me</mdb-checkbox>
-                  </div>
-                  <div>
-                    <!-- Forgot password -->
-                    <a href="">Forgot password?</a>
-                  </div>
-                </div>
-          
-                <!-- Sign in button -->
-                <button mdbBtn color="info" outline="true" rounded="true" block="true" class="my-4 waves-effect z-depth-0" mdbWavesEffect
-                  type="submit">Sign in</button>
-          
-                <!-- Register -->
-                <p>Not a member?
-                  <a href="">Register</a>
-                </p>
-          
-      
-          
-              </form>
-              <!-- Form -->
-          
-            </mdb-card-body>
-          
-          </mdb-card>
-          <!-- Material form login --></div>
-      <div class="col-md-3"></div>
+              </div>
+
+              <!-- Sign in button -->
+              <button mdbBtn color="info" block="true" class="my-4" type="submit">Sign in</button>
+              <!-- Register -->
+              <p>Not a member?
+                <a href="">Register</a>
+              </p>
+
+            </form>
+            <!-- Form -->
+
+          </mdb-card-body>
+
+        </mdb-card>
+        <!-- Material form login -->
+
+      </div>
+
     </div>
+    <div class="col-md-3"></div>
   </div>
+</div>
