add blockchain related services

--- a/src/app/components/land-registration/land-registration.component.html
+++ b/src/app/components/land-registration/land-registration.component.html
@@ -22,21 +22,20 @@
                 <!-- Land id -->
                 <div class="md-form">
                   <input type="text" name="nic" id="materialLoginFormEmail" class="form-control" mdbInput
-                  [(ngModel)]="nic">
+                  [(ngModel)]="landId">
                   <label for="materialLoginFormEmail">Land id</label>
                 </div>
 
                 <!-- Previous land id -->
                 <div class="md-form">
-                    <input type="text" name="nic" id="materialLoginFormEmail" class="form-control" mdbInput
-                    [(ngModel)]="nic">
-                    <label for="materialLoginFormEmail">Previous land id</label>
+                    <input type="text" name="nic" id="materialLoginFormEmail" class="form-control" mdbInput>
+                    <label for="materialLoginFormEmail">Previous land i(Optional)d</label>
                 </div>
 
                 <!-- Owner NIC -->
                 <div class="md-form">
                     <input type="text" name="nic" id="materialLoginFormEmail" class="form-control" mdbInput
-                    [(ngModel)]="nic">
+                    [(ngModel)]="ownerNIC">
                     <label for="materialLoginFormEmail">Owner NIC</label>
                 </div>
   
