--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -1,34 +1,42 @@
 <div class="">
     <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark purple">
+    <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark purple">
 
         <!-- Navbar brand -->
-        <mdb-navbar-brand><a class="navbar-brand" href="#"><mdb-icon fas icon="link"></mdb-icon>Land Chain</a></mdb-navbar-brand>
-      
+        <mdb-navbar-brand><a class="navbar-brand" href="#">
+                <mdb-icon fas icon="link"></mdb-icon>Land Chain
+            </a></mdb-navbar-brand>
+
         <!-- Collapsible content -->
         <links>
-      
+
             <!-- Links -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link waves-light" routerLink="/userRegistration" mdbWavesEffect>User-Registration<span class="sr-only">(current)</span></a>
+                    <a class="nav-link waves-light" routerLink="/userRegistration" mdbWavesEffect>User-Registration<span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link waves-light" routerLink="/landRegistration" mdbWavesEffect>Land-Registration</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link waves-light" routerLink="/changeOwner" mdbWavesEffect>Change-Owner</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link waves-light" routerLink="/users" mdbWavesEffect>Users</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link waves-light" routerLink="/lands" mdbWavesEffect>Lands</a>
+                    <a class="nav-link waves-light" routerLink="/lands" mdbWavesEffect>Lands</a>
                 </li>
             </ul>
-      
-      
+
+
             <ul class="navbar-nav">
                 <li class="nav-item dropdown" dropdown>
-                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-                          <mdb-icon fas icon="user"></mdb-icon><span class="caret"></span></a>
+                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light"
+                        mdbWavesEffect>
+                        <mdb-icon fas icon="user"></mdb-icon><span class="caret"></span>
+                    </a>
                     <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
                         <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/login">Login</a>
                         <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/signup">Signup</a>
@@ -38,11 +46,11 @@
                 </li>
             </ul>
             <!-- Links -->
-      
-      
+
+
         </links>
         <!-- Collapsible content -->
-      
-      </mdb-navbar>
-      <!--/.Navbar-->
+
+    </mdb-navbar>
+    <!--/.Navbar-->
 </div>
