--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,3 +1,13 @@
-<p>
-  users works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <ul class="list-group">
+        <div *ngFor="let user of users">
+            <li class="list-group-item list-group-item-success">{{user.NIC}}</li>
+        </div>
+      </ul>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+</div>
