--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="">
     <!--Navbar-->
-    <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark purple">
+    <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark info-color-dark">
 
         <!-- Navbar brand -->
         <mdb-navbar-brand><a class="navbar-brand" href="#">
