--- a/src/app/components/user-registration/user-registration.component.html
+++ b/src/app/components/user-registration/user-registration.component.html
@@ -6,7 +6,7 @@
           <!-- Material form login -->
           <mdb-card>
   
-            <mdb-card-header class="danger-color white-text text-center py-4">
+            <mdb-card-header class="info-color white-text text-center py-4">
               <h5>
                 <strong>User Registration</strong>
               </h5>
@@ -27,7 +27,7 @@
                 </div>
   
                 <!-- Register button-->
-                <button mdbBtn color="danger" block="true" class="my-4" type="submit">Register</button>
+                <button mdbBtn color="info" block="true" class="my-4" type="submit">Register</button>
                 <!-- Register -->
                 <p>
                   Register user in the blockchain
