--- a/src/app/components/change-owner/change-owner.component.html
+++ b/src/app/components/change-owner/change-owner.component.html
@@ -6,7 +6,7 @@
           <!-- Material form login -->
           <mdb-card>
   
-            <mdb-card-header class="danger-color white-text text-center py-4">
+            <mdb-card-header class="info-color white-text text-center py-4">
               <h5>
                 <strong>Change Owner</strong>
               </h5>
@@ -34,7 +34,7 @@
                 </div>
   
                 <!-- Register button-->
-                <button mdbBtn color="danger" block="true" class="my-4" type="submit">Change</button>
+                <button mdbBtn color="info" block="true" class="my-4" type="submit">Change</button>
                 <!-- Register -->
   
               </form>
