--- a/src/app/components/land-registration/land-registration.component.html
+++ b/src/app/components/land-registration/land-registration.component.html
@@ -6,7 +6,7 @@
           <!-- Material form login -->
           <mdb-card>
   
-            <mdb-card-header class="danger-color white-text text-center py-4">
+            <mdb-card-header class="info-color white-text text-center py-4">
               <h5>
                 <strong>Land Registration</strong>
               </h5>
@@ -40,7 +40,7 @@
                 </div>
   
                 <!-- Registration button -->
-                <button mdbBtn color="danger" block="true" class="my-4" type="submit">Register</button>
+                <button mdbBtn color="info" block="true" class="my-4" type="submit">Register</button>
                 <!-- Register -->
                 <p>
                   Register land in the blockchain
