--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!-- Footer -->
-  <footer class="page-footer font-small purple fixed-bottom">
+  <footer class="page-footer font-small info-color-dark fixed-bottom">
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2019 Copyright:
