--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -17,6 +17,9 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link waves-light" routerLink="/adminRegistration" mdbWavesEffect>Admin-Registration</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link waves-light" routerLink="/landRegistration" mdbWavesEffect>Land-Registration</a>
                 </li>
                 <li class="nav-item">
