--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -12,23 +12,23 @@
 
             <!-- Links -->
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item active" *ngIf="this.userService.user==='admin'">
                     <a class="nav-link waves-light" routerLink="/userRegistration" mdbWavesEffect>User-Registration<span
                             class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="this.userService.user==='admin'">
                     <a class="nav-link waves-light" routerLink="/adminRegistration" mdbWavesEffect>Admin-Registration</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="this.userService.user==='admin'">
                     <a class="nav-link waves-light" routerLink="/landRegistration" mdbWavesEffect>Land-Registration</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="this.userService.user==='admin'">
                     <a class="nav-link waves-light" routerLink="/changeOwner" mdbWavesEffect>Change-Owner</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="this.userService.user==='admin'">
                     <a class="nav-link waves-light" routerLink="/users" mdbWavesEffect>Users</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="this.userService.user==='admin'">
                     <a class="nav-link waves-light" routerLink="/lands" mdbWavesEffect>Lands</a>
                 </li>
             </ul>
