--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -44,7 +44,7 @@
                         <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/login">Login</a>
                         <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/signup">Signup</a>
                         <div class="divider dropdown-divider"></div>
-                        <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/logout">Logout</a>
+                        <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout()">Logout</a>
                     </div>
                 </li>
             </ul>
