--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -31,6 +31,12 @@
                 <li class="nav-item" *ngIf="this.userService.user==='admin'">
                     <a class="nav-link waves-light" routerLink="/lands" mdbWavesEffect>Lands</a>
                 </li>
+                <li class="nav-item" *ngIf="this.userService.user==='user'">
+                    <a class="nav-link waves-light" routerLink="/myLands" mdbWavesEffect>My-Lands</a>
+                </li>
+                <li class="nav-item" *ngIf="this.userService.user==='user'">
+                    <a class="nav-link waves-light" routerLink="/createAd" mdbWavesEffect>Create-Advertisment</a>
+                </li>
             </ul>
 
 
