--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -12,30 +12,33 @@
 
             <!-- Links -->
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active" *ngIf="this.userService.user==='admin'">
+                <li class="nav-item " *ngIf="this.userService.user==='admin'" routerLinkActive="active">
                     <a class="nav-link waves-light" routerLink="/userRegistration" mdbWavesEffect>User-Registration<span
                             class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item" *ngIf="this.userService.user==='admin'">
+                <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
                     <a class="nav-link waves-light" routerLink="/adminRegistration" mdbWavesEffect>Admin-Registration</a>
                 </li>
-                <li class="nav-item" *ngIf="this.userService.user==='admin'">
+                <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
                     <a class="nav-link waves-light" routerLink="/landRegistration" mdbWavesEffect>Land-Registration</a>
                 </li>
-                <li class="nav-item" *ngIf="this.userService.user==='admin'">
+                <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
                     <a class="nav-link waves-light" routerLink="/changeOwner" mdbWavesEffect>Change-Owner</a>
                 </li>
-                <li class="nav-item" *ngIf="this.userService.user==='admin'">
+                <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
                     <a class="nav-link waves-light" routerLink="/users" mdbWavesEffect>Users</a>
                 </li>
-                <li class="nav-item" *ngIf="this.userService.user==='admin'">
+                <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
                     <a class="nav-link waves-light" routerLink="/lands" mdbWavesEffect>Lands</a>
                 </li>
-                <li class="nav-item" *ngIf="this.userService.user==='user'">
+                <li class="nav-item" *ngIf="this.userService.user==='user'" routerLinkActive="active">
                     <a class="nav-link waves-light" routerLink="/myLands" mdbWavesEffect>My-Lands</a>
                 </li>
-                <li class="nav-item" *ngIf="this.userService.user==='user'">
+                <li class="nav-item" *ngIf="this.userService.user==='user'" routerLinkActive="active">
                     <a class="nav-link waves-light" routerLink="/createAd" mdbWavesEffect>Create-Advertisment</a>
+                </li>
+                <li class="nav-item" *ngIf="this.userService.user==='user'" routerLinkActive="active">
+                    <a class="nav-link waves-light" routerLink="/landHistory" mdbWavesEffect>Check-Land-History</a>
                 </li>
             </ul>
 
