add functionality to view ads

--- a/src/app/components/create-ad/create-ad.component.html
+++ b/src/app/components/create-ad/create-ad.component.html
@@ -48,16 +48,10 @@
                 <label for="materialRegisterFormEmail">Price in USD</label>
               </div>
 
-              <!-- Address -->
+              <!-- City -->
               <div class="md-form mt-0">
-                <textarea type="text" id="form7" class="md-textarea md-textarea-auto form-control" mdbInput [(ngModel)]="address" name="address"></textarea>
-                <label for="form7">Address</label>
-              </div>
-
-              <!-- Description -->
-              <div class="md-form mt-0">
-                <textarea type="text" id="form7" class="md-textarea md-textarea-auto form-control" mdbInput [(ngModel)]="description" name="description"></textarea>
-                <label for="form7">Description</label>
+                <input type="text" id="form7" class="form-control" mdbInput [(ngModel)]="city" name="city">
+                <label for="form7">City</label>
               </div>
 
               <!-- Sign up button -->
