--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -60,7 +60,7 @@
 
               <!-- Sign up button -->
               <button mdbBtn color="info" outline="true" rounded="true" block="true" class="my-4 waves-effect z-depth-0"
-                mdbWavesEffect type="submit">Sign in</button>
+                mdbWavesEffect type="submit">Sign Up</button>
 
               <hr>
 
