--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -1,68 +1,70 @@
 <div class="">
-    <!--Navbar-->
-    <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark info-color-dark">
+  <!--Navbar-->
+  <mdb-navbar SideClass="navbar navbar-expand-xl navbar-dark info-color-dark">
 
-        <!-- Navbar brand -->
-        <mdb-navbar-brand><a class="navbar-brand" href="#">
-                <mdb-icon fas icon="link"></mdb-icon>Land Chain
-            </a></mdb-navbar-brand>
+    <!-- Navbar brand -->
+    <mdb-navbar-brand><a class="navbar-brand" href="#">
+        <mdb-icon fas icon="link"></mdb-icon>Land Chain
+      </a></mdb-navbar-brand>
 
-        <!-- Collapsible content -->
-        <links>
+    <!-- Collapsible content -->
+    <links>
 
-            <!-- Links -->
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item " *ngIf="this.userService.user==='admin'" routerLinkActive="active">
-                    <a class="nav-link waves-light" routerLink="/userRegistration" mdbWavesEffect>User-Registration<span
-                            class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
-                    <a class="nav-link waves-light" routerLink="/adminRegistration" mdbWavesEffect>Admin-Registration</a>
-                </li>
-                <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
-                    <a class="nav-link waves-light" routerLink="/landRegistration" mdbWavesEffect>Land-Registration</a>
-                </li>
-                <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
-                    <a class="nav-link waves-light" routerLink="/changeOwner" mdbWavesEffect>Change-Owner</a>
-                </li>
-                <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
-                    <a class="nav-link waves-light" routerLink="/users" mdbWavesEffect>Users</a>
-                </li>
-                <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
-                    <a class="nav-link waves-light" routerLink="/lands" mdbWavesEffect>Lands</a>
-                </li>
-                <li class="nav-item" *ngIf="this.userService.user==='user'" routerLinkActive="active">
-                    <a class="nav-link waves-light" routerLink="/myLands" mdbWavesEffect>My-Lands</a>
-                </li>
-                <li class="nav-item" *ngIf="this.userService.user==='user'" routerLinkActive="active">
-                    <a class="nav-link waves-light" routerLink="/createAd" mdbWavesEffect>Create-Advertisment</a>
-                </li>
-                <li class="nav-item" *ngIf="this.userService.user==='user'" routerLinkActive="active">
-                    <a class="nav-link waves-light" routerLink="/landHistory" mdbWavesEffect>Check-Land-History</a>
-                </li>
-            </ul>
+      <!-- Links -->
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item " *ngIf="this.userService.user==='admin'" routerLinkActive="active">
+          <a class="nav-link waves-light" routerLink="/userRegistration" mdbWavesEffect>User-Registration<span
+              class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
+          <a class="nav-link waves-light" routerLink="/adminRegistration" mdbWavesEffect>Admin-Registration</a>
+        </li>
+        <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
+          <a class="nav-link waves-light" routerLink="/landRegistration" mdbWavesEffect>Land-Registration</a>
+        </li>
+        <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
+          <a class="nav-link waves-light" routerLink="/changeOwner" mdbWavesEffect>Change-Owner</a>
+        </li>
+        <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
+          <a class="nav-link waves-light" routerLink="/users" mdbWavesEffect>Users</a>
+        </li>
+        <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
+          <a class="nav-link waves-light" routerLink="/lands" mdbWavesEffect>Lands</a>
+        </li>
+        <li class="nav-item" *ngIf="this.userService.user==='user'" routerLinkActive="active">
+          <a class="nav-link waves-light" routerLink="/myLands" mdbWavesEffect>My-Lands</a>
+        </li>
+        <li class="nav-item" *ngIf="this.userService.user==='user'" routerLinkActive="active">
+          <a class="nav-link waves-light" routerLink="/createAd" mdbWavesEffect>Create-Advertisment</a>
+        </li>
+        <li class="nav-item" *ngIf="this.userService.user==='user'" routerLinkActive="active">
+          <a class="nav-link waves-light" routerLink="/landHistory" mdbWavesEffect>Check-Land-History</a>
+        </li>
+        <li class="nav-item" *ngIf="this.userService.user==='user'" routerLinkActive="active">
+          <a class="nav-link waves-light" routerLink="/ads" mdbWavesEffect>Ads</a>
+        </li>
+
+      </ul>
+
+      <div *ngIf="this.userService.user">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown" dropdown>
+            <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
+              <mdb-icon fas icon="user"></mdb-icon><span class="caret"></span>
+            </a>
+            <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+              <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout()">Logout</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <!-- Links -->
 
 
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown" dropdown>
-                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light"
-                        mdbWavesEffect>
-                        <mdb-icon fas icon="user"></mdb-icon><span class="caret"></span>
-                    </a>
-                    <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-                        <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/login">Login</a>
-                        <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/signup">Signup</a>
-                        <div class="divider dropdown-divider"></div>
-                        <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout()">Logout</a>
-                    </div>
-                </li>
-            </ul>
-            <!-- Links -->
+    </links>
+    <!-- Collapsible content -->
 
-
-        </links>
-        <!-- Collapsible content -->
-
-    </mdb-navbar>
-    <!--/.Navbar-->
+  </mdb-navbar>
+  <!--/.Navbar-->
 </div>
