--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -46,8 +46,9 @@
               <!-- Sign in button -->
               <button mdbBtn color="info" block="true" class="my-4" type="submit">Sign in</button>
               <!-- Register -->
+
               <p>Not a member?
-                <a href="">Register</a>
+                <a routerLink="/signup">Signup</a>
               </p>
 
             </form>
