add my ads component

--- a/src/app/components/my-ads/my-ads.component.html
+++ b/src/app/components/my-ads/my-ads.component.html
@@ -15,8 +15,9 @@
           <p class="card-text">{{ad.description}}</p>
           <p class="card-text">Call {{ad.phone}} for more info</p>
 
+          <h5 class="card-title">Ad status --> {{ad.status}}</h5>
 
-          <a href="#" class="btn btn-primary">Buy</a>
+          <a href="#" class="btn btn-primary">Delete</a>
 
 
         </div>
