--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -41,7 +41,7 @@
           <a class="nav-link waves-light" routerLink="/landHistory" mdbWavesEffect>Check-Land-History</a>
         </li>
         <li class="nav-item" *ngIf="this.userService.user==='user'" routerLinkActive="active">
-          <a class="nav-link waves-light" routerLink="/ads" mdbWavesEffect>Ads</a>
+          <a class="nav-link waves-light" routerLink="/myAds" mdbWavesEffect>My-Ads</a>
         </li>
 
       </ul>
