--- a/src/app/components/ads/ads.component.html
+++ b/src/app/components/ads/ads.component.html
@@ -1,5 +1,16 @@
 <div class="container">
   <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+          <div *ngIf="ads === undefined || ads.length == 0" >
+              <div class="alert alert-danger" role="alert">
+                No ads to show
+              </div>
+          </div>
+      </div>
+      <div class="col-md-3"></div>
+  </div>
+  <div class="row">
 
     <div *ngFor="let ad of ads">
 
@@ -14,9 +25,6 @@
           <p class="card-text">Owner:{{ad.ownerId}}</p>
           <p class="card-text">{{ad.description}}</p>
           <p class="card-text">Call {{ad.phone}} for more info</p>
-
-
-          <a href="#" class="btn btn-primary">Buy</a>
 
 
         </div>
