--- a/src/app/components/admin-registration/admin-registration.component.html
+++ b/src/app/components/admin-registration/admin-registration.component.html
@@ -22,14 +22,16 @@
                 <div class="col">
                   <!-- First name -->
                   <div class="md-form">
-                    <input type="text" id="materialRegisterFormFirstName" class="form-control" mdbInput [(ngModel)]="firstName" name="firstName">
+                    <input type="text" id="materialRegisterFormFirstName" class="form-control" mdbInput
+                      [(ngModel)]="firstName" name="firstName">
                     <label for="materialRegisterFormFirstName">First name</label>
                   </div>
                 </div>
                 <div class="col">
                   <!-- Last name -->
                   <div class="md-form">
-                    <input type="email" id="materialRegisterFormLastName" class="form-control" mdbInput [(ngModel)]="lastName" name="lastName">
+                    <input type="email" id="materialRegisterFormLastName" class="form-control" mdbInput
+                      [(ngModel)]="lastName" name="lastName">
                     <label for="materialRegisterFormLastName">Last name</label>
                   </div>
                 </div>
@@ -37,20 +39,23 @@
 
               <!-- NIC -->
               <div class="md-form mt-0">
-                <input type="text" id="materialRegisterFormEmail" class="form-control" mdbInput [(ngModel)]="nic" name="nic">
+                <input type="text" id="materialRegisterFormEmail" class="form-control" mdbInput [(ngModel)]="nic"
+                  name="nic">
                 <label for="materialRegisterFormEmail">NIC</label>
               </div>
 
               <!-- E-mail -->
               <div class="md-form mt-0">
-                <input type="email" id="materialRegisterFormEmail" class="form-control" mdbInput [(ngModel)]="email" name="email">
+                <input type="email" id="materialRegisterFormEmail" class="form-control" mdbInput [(ngModel)]="email"
+                  name="email">
                 <label for="materialRegisterFormEmail">E-mail</label>
               </div>
 
               <!-- Password -->
               <div class="md-form">
                 <input type="password" id="materialRegisterFormPassword" class="form-control"
-                  aria-describedby="materialRegisterFormPasswordHelpBlock" mdbInput [(ngModel)]="password" name="password">
+                  aria-describedby="materialRegisterFormPasswordHelpBlock" mdbInput [(ngModel)]="password"
+                  name="password">
                 <label for="materialRegisterFormPassword">Password</label>
                 <small id="materialRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
                   At least 8 characters and 1 digit
