--- a/src/app/components/create-ad/create-ad.component.html
+++ b/src/app/components/create-ad/create-ad.component.html
@@ -18,33 +18,37 @@
             <!-- Form -->
             <form class="text-center" style="color: #757575;" (ngSubmit)="onSubmit()">
 
-              
-                <div class="md-form mt-0">
-                  <!-- Land Id -->
-                  <div class="md-form">
-                    <input type="text" id="materialRegisterFormFirstName" class="form-control" mdbInput [(ngModel)]="landId" name="landId">
-                    <label for="materialRegisterFormFirstName">Land ID</label>
-                  </div>
-                </div>
 
-                <div class="md-form mt-0">
-                  <!-- Size -->
-                  <div class="md-form">
-                    <input type="text" id="materialRegisterFormLastName" class="form-control" mdbInput [(ngModel)]="size" name="size">
-                    <label for="materialRegisterFormLastName">Land size in perchs(Use whole numbers only)</label>
-                  </div>
+              <div class="md-form mt-0">
+                <!-- Land Id -->
+                <div class="md-form">
+                  <input type="text" id="materialRegisterFormFirstName" class="form-control" mdbInput
+                    [(ngModel)]="landId" name="landId">
+                  <label for="materialRegisterFormFirstName">Land ID</label>
                 </div>
-              
+              </div>
+
+              <div class="md-form mt-0">
+                <!-- Size -->
+                <div class="md-form">
+                  <input type="text" id="materialRegisterFormLastName" class="form-control" mdbInput [(ngModel)]="size"
+                    name="size">
+                  <label for="materialRegisterFormLastName">Land size in perchs(Use whole numbers only)</label>
+                </div>
+              </div>
+
 
               <!-- Phone -->
               <div class="md-form mt-0">
-                <input type="text" id="materialRegisterFormEmail" class="form-control" mdbInput [(ngModel)]="phone" name="phone">
+                <input type="text" id="materialRegisterFormEmail" class="form-control" mdbInput [(ngModel)]="phone"
+                  name="phone">
                 <label for="materialRegisterFormEmail">Contact Number</label>
               </div>
 
               <!-- Price -->
               <div class="md-form mt-0">
-                <input type="text" id="materialRegisterFormEmail" class="form-control" mdbInput [(ngModel)]="price" name="price">
+                <input type="text" id="materialRegisterFormEmail" class="form-control" mdbInput [(ngModel)]="price"
+                  name="price">
                 <label for="materialRegisterFormEmail">Price in USD</label>
               </div>
 
