modifications to components

--- a/src/app/components/change-owner/change-owner.component.html
+++ b/src/app/components/change-owner/change-owner.component.html
@@ -1,53 +1,61 @@
 <div class="container">
-    <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6">
-        <div class="crd">
-          <!-- Material form login -->
-          <mdb-card>
-  
-            <mdb-card-header class="info-color white-text text-center py-4">
-              <h5>
-                <strong>Change Owner</strong>
-              </h5>
-            </mdb-card-header>
-  
-  
-            <!--Card content-->
-            <mdb-card-body class="px-lg-5 pt-0">
-  
-              <!-- Form -->
-              <form class="text-center" style="color: #757575;" (ngSubmit)="onSubmit()">
-  
-                <!-- Land id -->
-                <div class="md-form">
-                  <input type="text" name="landId" id="materialLoginFormEmail" class="form-control" mdbInput
-                  [(ngModel)]="landId">
-                  <label for="materialLoginFormEmail">Land ID</label>
-                </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="crd">
+        <!-- Material form login -->
+        <mdb-card>
 
-                <!-- Land id -->
-                <div class="md-form">
-                    <input type="text" name="newOwnerId" id="materialLoginFormEmail" class="form-control" mdbInput
-                    [(ngModel)]="newOwnerId">
-                    <label for="materialLoginFormEmail">New owner NIC</label>
+          <mdb-card-header class="info-color white-text text-center py-4">
+            <h5>
+              <strong>Change Owner</strong>
+            </h5>
+          </mdb-card-header>
+
+
+          <!--Card content-->
+          <mdb-card-body class="px-lg-5 pt-0">
+
+            <!-- Form -->
+            <form  style="color: #757575;" (ngSubmit)="onSubmit()" #f="ngForm">
+
+              <!-- Land id -->
+              <div class="form-group">
+                <label for="fn">Land ID</label>
+                <input type="text" id="fn" class="form-control" mdbInput [(ngModel)]="landId" name="landId"
+                  #fn="ngModel" required pattern="^[0-9]+$">
+                <div class="form-text text-danger" *ngIf="fn.touched && !fn.valid">
+                  <small *ngIf="fn.errors.required">Land ID is required!</small>
+                  <small *ngIf="fn.errors.pattern">Invalid ID!</small>
                 </div>
-  
-                <!-- Register button-->
-                <button mdbBtn color="info" block="true" class="my-4" type="submit">Change</button>
-                <!-- Register -->
-  
-              </form>
-              <!-- Form -->
-  
-            </mdb-card-body>
-  
-          </mdb-card>
-          <!-- Material form login -->
-  
-        </div>
-  
+              </div>
+
+              <!-- Owner NIC -->
+              <div class="form-group">
+                <label for="ln">New owner's NIC</label>
+                <input type="text" id="ln" class="form-control" mdbInput [(ngModel)]="newOwnerId" name="newOwnerId"
+                  #ln="ngModel" required pattern="^[0-9]{9}V$">
+                <div class="form-text text-danger" *ngIf="ln.touched && !ln.valid">
+                  <small *ngIf="ln.errors.required">NIC is required!</small>
+                  <small *ngIf="ln.errors.pattern">Invalid NIC!</small>
+                </div>
+              </div>
+
+              <!-- Register button-->
+              <button mdbBtn color="info" block="true" class="my-4" type="submit" [disabled]="!f.valid">Change</button>
+              <!-- Register -->
+
+            </form>
+            <!-- Form -->
+
+          </mdb-card-body>
+
+        </mdb-card>
+        <!-- Material form login -->
+
       </div>
-      <div class="col-md-3"></div>
+
     </div>
+    <div class="col-md-3"></div>
   </div>
+</div>
