--- a/src/app/components/land-history/land-history.component.scss
+++ b/src/app/components/land-history/land-history.component.scss
@@ -1,9 +1,13 @@
 
 .list-group{
-    padding-top: 25%;
-    padding-bottom: 25%;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .list-group-item{
     margin: 10px;
+}
+
+.form-inline{
+    padding:10px
 }
