--- a/src/app/components/lands/lands.component.scss
+++ b/src/app/components/lands/lands.component.scss
@@ -1,9 +1,14 @@
 
 .list-group{
-    padding-top: 25%;
-    padding-bottom: 25%;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .list-group-item{
     margin: 10px;
+}
+
+.card{
+    margin: 10px;
+    padding:10px;
 }
