--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="">
   <!--Navbar-->
-  <mdb-navbar SideClass="navbar navbar-expand-xl navbar-dark info-color-dark">
+  <mdb-navbar SideClass="navbar navbar-expand-xl navbar-dark info-color-dark" style="opacity: 0.5;">
 
     <!-- Navbar brand -->
     <mdb-navbar-brand><a class="navbar-brand" href="#">
